--- a/giftlink-backend/util/import-mongo/package.json
+++ b/giftlink-backend/util/import-mongo/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "mongosh": "^2.3.0",
+    "natural": "^8.0.1"
   }
 }
