--- a/giftlink-backend/util/import-mongo/.env.sample
+++ b/giftlink-backend/util/import-mongo/.env.sample
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
+MONGO_URL="mongodb://root:WniNqswQNa1EFGw8SCPsGfNU@172.21.143.180:27017"
 DATASRC=gifts.json
