--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
+MONGO_URL=mongodb://root:NQDrQz72gFDCVqImwTR7T3fK@172.21.24.213:27017
 JWT_SECRET=setasecret
